# Iliagpt.io

./: .dockerignore  .env.example  .gitignore  .replit  .semgrepignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  Dockerfile  PRODUCTION_SETUP.md  README.md  commitlint.config.js  docker-compose.dev.yml  docker-compose.yml  drizzle.config.ts  eslint.config.js  lint-staged.config.js  mcp_servers.json  oc-shot.cjs  package-lock.json  package.json  playwright.config.capabilities.ts  playwright.config.office-engine.ts  playwright.config.ts  playwright.prod.config.ts  pyproject.toml  replit.md  tsconfig.ci.json  tsconfig.json  tsconfig.officeWorker.json  vite.config.ts  vitest.client.config.ts  vitest.config.ts
.claude/: launch.json
.github/: CI_CHECK.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
Downloads/: ~$1 929 - RESULTADOS HASTA ÍNDICE.docx  ~$nografía.docx
artifacts/: 1772311665495_Say_hello_in_exactly_5_words.docx  1772311680494_Say_hello_in_exactly_5_words.docx  1772452347905_un_perrito.docx  1772513114994_un_perro.xlsx  1772514271165_un_gato.xlsx  1772514775036_un_gato.xlsx  1772514795502_un_perro.docx  1775250472838_alumnentos_saludables.xlsx  1775582132517_Tabla_de_alimentos_saludables_categorizados_por_gr.docx  1775582132551_Tabla_de_alimentos_saludables_categorizados_por_gr.xlsx  1775600103739_Gesti_n_Administrativa_en_Organizaciones.pptx  Test_1775590364738.docx  Test_1775590364798.docx  Test_1775590364820.docx  Test_1775590364848.docx  Test_1775590364869.docx  Test_1775590384275.docx  Test_1775590384360.docx  Test_1775590384372.docx  Test_1775590384387.docx  Test_1775590384407.docx  Test_1775602255316.docx  Test_1775602255829.docx  Test_1775602256023.docx  Test_1775602256114.docx  Test_1775602256170.docx  Test_1775602283681.docx  Test_1775602283756.docx  Test_1775602283789.docx  Test_1775602283837.docx  Test_1775602283867.docx  Test_1775602333716.docx  Test_1775602333790.docx  Test_1775602333848.docx  Test_1775602333886.docx  Test_1775602334031.docx  Test_1775602373355.docx  Test_1775602373462.docx  Test_1775602373474.docx  Test_1775602373485.docx  (+53 more)
attached_assets/: 00_overview_1766283299495.md  01_architecture_1766283299495.md  02_schemas_1766283299495.md  04_word_rendering_1766283299495.md  (+124 more)
native/: .gitignore  Cargo.toml  README.md  com.iliagpt.hypervisor.plist  hal.ts  iliagpt-native.node  test_ax.rs  test_windows.rs
native/benches/: hal_parity.rs
native/src/: lib.rs  types.rs
native/src/platform/: mod.rs
native/src/platform/linux/: accessibility.rs  input.rs  mod.rs  screen_capture.rs  system_info.rs  window_manager.rs
native/src/platform/macos/: accessibility.rs  applescript.rs  input.rs  mod.rs  screen_capture.rs  system_info.rs  window_manager.rs
native/src/platform/windows/: input.rs  mod.rs  screen_capture.rs  system_info.rs  uiautomation.rs  window_manager.rs
native/src/vision/: capture.rs  diff.rs  mod.rs  ocr.rs
native/tests/: macos_tests.rs
python_agent_tools/: README.md  pyproject.toml  run_api.py
python_agent_tools/docs/: API.md
python_agent_tools/src/: __init__.py
python_agent_tools/src/agents/: __init__.py  base_agent.py  browser_agent.py  code_agent.py  communication_agent.py  content_agent.py  data_agent.py  document_agent.py  orchestrator_agent.py  qa_agent.py  research_agent.py  security_agent.py
python_agent_tools/src/api/: __init__.py  agents.py  health.py  main.py  websocket.py  workflows.py
python_agent_tools/src/core/: __init__.py  factory.py  memory.py  orchestration.py  pipeline.py  reasoning.py  registry.py  state_manager.py  workflow_engine.py
python_agent_tools/src/integrations/: __init__.py  database.py  llm_adapters.py  vector_store.py
python_agent_tools/src/tools/: __init__.py  analytics_tools.py  api_call.py  base.py  browser_tool.py  code_execute.py  data_transform.py  document_gen.py  embeddings.py  file_tools.py  memory_tools.py  message.py  monitoring_tools.py  nlp_tools.py  orchestrate.py  plan.py  reason.py  sanitize_input.py  search_web.py  secrets_manage.py  shell.py  web_scraper.py
python_agent_tools/src/utils/: __init__.py  config.py  logging_config.py  metrics.py  middleware.py  rate_limiter.py  retry.py
python_agent_tools/tests/: __init__.py  conftest.py  test_api.py  test_factory.py  test_pipeline.py  test_registry.py  test_tools.py
(+3993 files in other folders)
