[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=25.1.0",
    "aiohttp>=3.13.3",
    "beautifulsoup4>=4.14.3",
    "celery>=5.6.2",
    "defusedxml>=0.7.1",
    "fastapi>=0.128.0",
    "gunicorn>=23.0.0",
    "httpx>=0.28.1",
    "langdetect>=1.0.9",
    "matplotlib>=3.10.8",
    "numpy>=2.3.5",
    "opentelemetry-api>=1.39.1",
    "opentelemetry-exporter-otlp>=1.39.1",
    "opentelemetry-instrumentation-fastapi>=0.60b1",
    "opentelemetry-instrumentation-redis>=0.60b1",
    "opentelemetry-propagator-b3>=1.39.1",
    "opentelemetry-sdk>=1.39.1",
    "orjson>=3.11.5",
    "prometheus-client>=0.23.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pyjwt>=2.10.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "python-docx>=1.2.0",
    "python-json-logger>=4.0.0",
    "python-multipart>=0.0.22",
    "redis>=7.1.0",
    "structlog>=25.5.0",
    "tenacity>=9.1.2",
    "uvicorn>=0.40.0",
    "pillow>=12.1.1",
    "protobuf>=6.33.5",
]
