[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "python-agent-tools"
version = "0.1.0"
description = "A modular framework for building AI agents with tools"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Agent Tools Team" },
]
keywords = [
    "ai",
    "agents",
    "tools",
    "llm",
    "automation",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "structlog>=23.0.0",
    "tenacity>=8.0.0",
    "aiohttp>=3.13.4",
    "prometheus-client>=0.17.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

llm = [
    "openai>=1.0.0",
    "anthropic>=0.5.0",
]

vector = [
    "pinecone-client>=2.0.0",
    "chromadb>=0.4.0",
]

database = [
    "asyncpg>=0.28.0",
    "redis>=4.0.0",
]

all = [
    "python-agent-tools[dev,llm,vector,database]",
]

[project.urls]
Homepage = "https://github.com/example/python-agent-tools"
Documentation = "https://github.com/example/python-agent-tools#readme"
Repository = "https://github.com/example/python-agent-tools"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "I",
    "UP",
    "B",
    "C4",
    "SIM",
]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
